cgo/include/urnetwork_sdk.h

/* SetupNewDeviceCallback */
typedef bool (*urnet_setup_new_device_cb)(void* user_data, uint64_t device, const char* proxy_config_result_json);
/* SnClaimsCallback */
typedef void (*urnet_sn_claims_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnGasBalanceCallback */
typedef void (*urnet_sn_gas_balance_cb)(void* user_data, const char* result_json, const char* err_param);
char* urnet_new_export_options(void);
char* urnet_new_feedback_submitted_event(int64_t rating, const char* reason, const char* text);
char* urnet_new_id(void);
uint64_t urnet_new_login_view_controller(uint64_t api);
uint64_t urnet_new_network_name_validation_view_controller(uint64_t api);
char* urnet_new_network_space_key(const char* host_name, const char* env_name);
uint64_t urnet_new_network_space_manager(const char* storage_path);
uint64_t urnet_new_network_space_manager_no_storage(void);
char* urnet_new_offer_card_tapped_event(const char* plan);
char* urnet_new_offer_cta_tapped_event(const char* plan, const char* store);
char* urnet_new_offer_declined_event(const char* control, int64_t elapsed_ms);
char* urnet_new_offer_screen_shown_event(const char* surface, const char* experiment, const char* variant, const char* tier, double price_shown, const char* currency, int64_t expires_in_s);
char* urnet_new_onboarding_step_completed_event(const char* step, int64_t index, int64_t elapsed_ms);
char* urnet_new_onboarding_step_shown_event(const char* step, int64_t index, int64_t elapsed_ms);
char* urnet_new_onboarding_step_skipped_event(const char* step, int64_t index, int64_t elapsed_ms);
uint64_t urnet_new_platform_device_remote(uint64_t network_space, const char* by_jwt, const char* proxy_url, const char* signed_proxy_id, const char* instance_id, char** out_error);
uint64_t urnet_new_proxy_device_with_defaults(const char* proxy_config_json, urnet_setup_new_device_cb setup_new_device_callback_setup_new_device, void* setup_new_device_callback_user_data);
char* urnet_new_purchase_cancelled_event(const char* store, const char* product, const char* plan, bool trial, double price, const char* currency);
char* urnet_new_purchase_completed_event(const char* store, const char* product, const char* plan, bool trial, double price, const char* currency);
char* urnet_new_purchase_failed_event(const char* store, const char* product, const char* plan, bool trial, double price, const char* currency, const char* error_class);
char* urnet_new_purchase_started_event(const char* store, const char* product, const char* plan, bool trial, double price, const char* currency);
char* urnet_new_signup_optout_changed_event(bool product_updates);
char* urnet_new_sn_chain_settings(void);
uint64_t urnet_new_subscription_balance_view_controller(uint64_t api);
int64_t urnet_new_time_unix_milli(int64_t unix_milli);
char* urnet_new_transfer_path(const char* source_id, const char* destination_id, const char* stream_id);
uint64_t urnet_new_tunnel(void);
uint64_t urnet_new_urls_network_space(const char* api_url, const char* platform_url);
char* urnet_new_widget_added_event(const char* kind);
char* urnet_normal_env_name(const char* env_name);
char* urnet_normal_extender_gossip_mode(const char* mode);
char* urnet_order_connected_provider_locations(const char* locations_json);
char* urnet_parse_checkout_redirect(const char* uri, char** out_error);
char* urnet_parse_client_events_json(const char* events_json, char** out_error);
char* urnet_parse_id(const char* src, char** out_error);
char* urnet_points_leaderboard_key_of(const char* row_json);
char* urnet_points_leaderboard_scroll_label(int64_t rank, int64_t total);
int64_t urnet_points_to_nano_points(double points);
char* urnet_public_identity_key_hash(const uint8_t* public_key, int32_t public_key_len);
int64_t urnet_purchase_report_backoff_millis(int64_t attempt);
char* urnet_record_tunnel_recovery_stage(const char* stage, const char* result, bool intended, bool consumer_present, bool has_location, int64_t provider_count, int64_t generation);
void urnet_report_memory_trim_level(int64_t level);
int64_t urnet_saving_percent(double yearly_amount, double monthly_amount, int64_t minor_unit_digits);
char* urnet_selectable_transport_modes(void);
char* urnet_service_host_name(const char* key_json, const char* values_json, const char* service);
char* urnet_service_url(const char* key_json, const char* values_json, const char* scheme, const char* service);
void urnet_set_control_ip_family_policy(int64_t policy);
void urnet_set_device_rpc_h1_plus_enabled(bool enabled);
void urnet_set_egress_interface_index(int64_t index4, int64_t index6);
void urnet_set_extender_store_read_only(bool read_only);
bool urnet_set_log_dir(const char* log_dir, char** out_error);
bool urnet_set_log_dir_for_process(const char* root, const char* process_name, char** out_error);
bool urnet_set_log_verbosity(int64_t level, char** out_error);
void urnet_set_memory_limit(int64_t limit);
void urnet_set_memory_profile_rate(int64_t byte_count);
void urnet_set_message_pool_memory_targets(int64_t packet_pool_byte_count, int64_t large_object_pool_byte_count);
bool urnet_set_transfer_diagnostic_snapshots_enabled(bool enabled);
char* urnet_short_ss58(const char* address);
char* urnet_sn_claim_transactions_for(const char* settings_json, const char* coldkey_ss58, const char* epochs_json, char** out_error);
void urnet_sn_claims_for(const char* settings_json, const char* coldkey_ss58, int64_t from_epoch, urnet_sn_claims_cb callback_result, void* callback_user_data);
char* urnet_sn_fleet_binding_digest(const char* binding_json, char** out_error);
void urnet_sn_gas_balance_for(const char* settings_json, const char* address, urnet_sn_gas_balance_cb callback_result, void* callback_user_data);
char* urnet_sn_payout_leaf_hex(const char* coldkey_ss58, int64_t share_bps);
char* urnet_sn_testnet_chain_settings(void);
char* urnet_suggest_emoji_tag(int64_t count);
char* urnet_transport_settings_auto_modes(const char* settings_json);
char* urnet_transport_settings_enabled_transport_types(const char* settings_json);
bool urnet_transport_settings_equal(const char* a_json, const char* b_json);
char* urnet_transport_settings_with_auto_mode_enabled(const char* settings_json, const char* mode, bool enabled);
char* urnet_transport_settings_with_mode(const char* settings_json, const char* mode);
void urnet_trim_memory(void);
int64_t urnet_usd_to_nano_cents(double usd);
char* urnet_validate_emoji_tag(const char* tag);
bool urnet_validate_ss58(const char* address);
bool urnet_verify_payout_proof_hex(const char* root_hex, const char* leaf_hex, const char* proof_hex_json);
bool urnet_write_heap_profile(const char* path, char** out_error);
char* urnet_write_heap_profile_for_diag(const char* path, char** out_error);
/* IoLoopDoneCallback */
typedef void (*urnet_io_loop_done_cb)(void* user_data);
void urnet_io_loop_close(uint64_t self);
uint64_t urnet_new_io_loop(uint64_t device_local, int64_t fd, urnet_io_loop_done_cb done_callback_io_loop_done, void* done_callback_user_data);