java/src/main/java/io/ur/sdk/Raw.java

  Pointer urnet_new_export_options();
  Pointer urnet_new_feedback_submitted_event(long a0, String a1, String a2);
  Pointer urnet_new_id();
  long urnet_new_login_view_controller(long a0);
  long urnet_new_network_name_validation_view_controller(long a0);
  Pointer urnet_new_network_space_key(String a0, String a1);
  long urnet_new_network_space_manager(String a0);
  long urnet_new_network_space_manager_no_storage();
  Pointer urnet_new_offer_card_tapped_event(String a0);
  Pointer urnet_new_offer_cta_tapped_event(String a0, String a1);
  Pointer urnet_new_offer_declined_event(String a0, long a1);
  Pointer urnet_new_offer_screen_shown_event(String a0, String a1, String a2, String a3, double a4, String a5, long a6);
  Pointer urnet_new_onboarding_step_completed_event(String a0, long a1, long a2);
  Pointer urnet_new_onboarding_step_shown_event(String a0, long a1, long a2);
  Pointer urnet_new_onboarding_step_skipped_event(String a0, long a1, long a2);
  long urnet_new_platform_device_remote(long a0, String a1, String a2, String a3, String a4, PointerByReference a5);
  long urnet_new_proxy_device_with_defaults(String a0, urnet_setup_new_device_cb a1, Pointer a2);
  Pointer urnet_new_purchase_cancelled_event(String a0, String a1, String a2, byte a3, double a4, String a5);
  Pointer urnet_new_purchase_completed_event(String a0, String a1, String a2, byte a3, double a4, String a5);
  Pointer urnet_new_purchase_failed_event(String a0, String a1, String a2, byte a3, double a4, String a5, String a6);
  Pointer urnet_new_purchase_started_event(String a0, String a1, String a2, byte a3, double a4, String a5);
  Pointer urnet_new_signup_optout_changed_event(byte a0);
  Pointer urnet_new_sn_chain_settings();
  long urnet_new_subscription_balance_view_controller(long a0);
  long urnet_new_time_unix_milli(long a0);
  Pointer urnet_new_transfer_path(String a0, String a1, String a2);
  long urnet_new_tunnel();
  long urnet_new_urls_network_space(String a0, String a1);
  Pointer urnet_new_widget_added_event(String a0);
  Pointer urnet_normal_env_name(String a0);
  Pointer urnet_normal_extender_gossip_mode(String a0);
  Pointer urnet_order_connected_provider_locations(String a0);
  Pointer urnet_parse_checkout_redirect(String a0, PointerByReference a1);
  Pointer urnet_parse_client_events_json(String a0, PointerByReference a1);
  Pointer urnet_parse_id(String a0, PointerByReference a1);
  Pointer urnet_points_leaderboard_key_of(String a0);
  Pointer urnet_points_leaderboard_scroll_label(long a0, long a1);
  long urnet_points_to_nano_points(double a0);
  Pointer urnet_public_identity_key_hash(Pointer a0, int a1);
  long urnet_purchase_report_backoff_millis(long a0);
  Pointer urnet_record_tunnel_recovery_stage(String a0, String a1, byte a2, byte a3, byte a4, long a5, long a6);
  void urnet_report_memory_trim_level(long a0);
  long urnet_saving_percent(double a0, double a1, long a2);
  Pointer urnet_selectable_transport_modes();
  Pointer urnet_service_host_name(String a0, String a1, String a2);
  Pointer urnet_service_url(String a0, String a1, String a2, String a3);
  void urnet_set_control_ip_family_policy(long a0);
  void urnet_set_device_rpc_h1_plus_enabled(byte a0);
  void urnet_set_egress_interface_index(long a0, long a1);
  void urnet_set_extender_store_read_only(byte a0);
  byte urnet_set_log_dir(String a0, PointerByReference a1);
  byte urnet_set_log_dir_for_process(String a0, String a1, PointerByReference a2);
  byte urnet_set_log_verbosity(long a0, PointerByReference a1);
  void urnet_set_memory_limit(long a0);
  void urnet_set_memory_profile_rate(long a0);
  void urnet_set_message_pool_memory_targets(long a0, long a1);
  byte urnet_set_transfer_diagnostic_snapshots_enabled(byte a0);
  Pointer urnet_short_ss58(String a0);
  Pointer urnet_sn_claim_transactions_for(String a0, String a1, String a2, PointerByReference a3);
  void urnet_sn_claims_for(String a0, String a1, long a2, urnet_sn_claims_cb a3, Pointer a4);
  Pointer urnet_sn_fleet_binding_digest(String a0, PointerByReference a1);
  void urnet_sn_gas_balance_for(String a0, String a1, urnet_sn_gas_balance_cb a2, Pointer a3);
  Pointer urnet_sn_payout_leaf_hex(String a0, long a1);
  Pointer urnet_sn_testnet_chain_settings();
  Pointer urnet_suggest_emoji_tag(long a0);
  Pointer urnet_transport_settings_auto_modes(String a0);
  Pointer urnet_transport_settings_enabled_transport_types(String a0);
  byte urnet_transport_settings_equal(String a0, String a1);
  Pointer urnet_transport_settings_with_auto_mode_enabled(String a0, String a1, byte a2);
  Pointer urnet_transport_settings_with_mode(String a0, String a1);
  void urnet_trim_memory();
  long urnet_usd_to_nano_cents(double a0);
  Pointer urnet_validate_emoji_tag(String a0);
  byte urnet_validate_ss58(String a0);
  byte urnet_verify_payout_proof_hex(String a0, String a1, String a2);
  byte urnet_write_heap_profile(String a0, PointerByReference a1);
  Pointer urnet_write_heap_profile_for_diag(String a0, PointerByReference a1);
  void urnet_io_loop_close(long a0);
  long urnet_new_io_loop(long a0, long a1, urnet_io_loop_done_cb a2, Pointer a3);
}
